# databricks_declarative_framework

./: .gitignore  README.md  backlog.txt  debug.py  main.py  run_pipeline.py  test.py
declarative_data_framework/: README.md  main.py  pyproject.toml  setup.cfg
declarative_data_framework/dados/: exemplo.csv
declarative_data_framework/dados/saida/teste.csv/: exemplo_pipeline.csv
declarative_data_framework/src/: __main__.py  cli.py
declarative_data_framework/src/core/: engine.py  pipeline.py  step.py
declarative_data_framework/src/declarative_data_framework/: __init__.py  cli.py  exceptions.py
declarative_data_framework/src/declarative_data_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
declarative_data_framework/src/declarative_data_framework/core/: engine.py  pipeline.py  step.py
declarative_data_framework/src/engines/: pandas_engine.py  spark_engine.py
declarative_data_framework/src/engines/pandas/: pandas_engine.py
declarative_data_framework/src/models/: pydantic_models.py
declarative_data_framework/src/quality/: __init__.py  rules.py
declarative_data_framework/src/steps/: reader.py  transformer.py  validator.py  writer.py
declarative_data_framework/tests/: conftest.py  test_cli.py  test_engine.py  test_models.py  test_pipeline.py  test_quality.py  test_step.py
declarative_data_framework/tests/cli/: test_cli.py
declarative_data_framework/tests/core/: test_engine.py  test_pipeline.py  test_quality.py  test_step.py
declarative_data_framework/tests/models/: test_pydantic_models.py
pipelines/: bronze_clients.yml  (+5 more)
(+41 files in other folders)
